terraform/Lb.tf
resource "aws_lb" "tm_alb" {
  name               = "tm-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.tm_ecs_sg.id]
  subnets            = [aws_subnet.tm_public_subnet_1.id, aws_subnet.tm_public_subnet_2.id]

  enable_deletion_protection = false

  tags = {
    Name = "tm-alb"
  }
}

# Define Application Load Balancer Target Group
resource "aws_lb_target_group" "tm_target_group" {
  name        = "tm-target-group"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = aws_vpc.tm_vpc.id
  target_type = "ip"

}

resource "aws_lb_listener" "tm_http" {
  load_balancer_arn = aws_lb.tm_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "forward"

    forward {
      target_group {
        arn    = aws_lb_target_group.tm_target_group.arn
        weight = 1
      }

      stickiness {
        enabled  = false
        duration = 1
      }
    }
  }
}
